Chore: Add ErrorHandler
Adding an error handler component, need to read up on this.

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -3,7 +3,9 @@
 <PageTitle>Guess The Number</PageTitle>
 <ErrorBoundary>
     <ChildContent>
-        <Game />
+        <ErrorHandler>
+            <Game />
+        </ErrorHandler>
     </ChildContent>
     <ErrorContent>
         <h1>You have entered an invalid guess.</h1>
